--- a/iconanim/src/main/res/animator/cancel_group_exit.xml
+++ b/iconanim/src/main/res/animator/cancel_group_exit.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <objectAnimator
-            android:duration="@integer/cancel_anim_time"
+    <objectAnimator android:duration="@integer/cancel_anim_time"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator"
             android:propertyName="rotation"
             android:valueFrom="135"
             android:valueTo="0"
-            android:valueType="floatType" />
+            android:valueType="floatType"/>
 
 </set>
