--- a/iconanim/src/main/res/animator/visible_strike_path_enter.xml
+++ b/iconanim/src/main/res/animator/visible_strike_path_enter.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <objectAnimator
-            android:duration="@integer/visible_anim_time"
+    <objectAnimator android:duration="@integer/visible_anim_time"
             android:interpolator="@android:anim/accelerate_decelerate_interpolator"
             android:propertyName="pathData"
             android:valueFrom="M 19.73 22 L 21 20.73 L 3.27 3 L 2 4.27 Z"
             android:valueTo="M 2 4.27 L 3.27 3 L 3.27 3 L 2 4.27 Z"
-            android:valueType="pathType" />
+            android:valueType="pathType"/>
 
 </set>
