--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:showIn="@layout/item_note_text">
+        tools:showIn="@layout/item_note_roll">
 
     <data>
         <import alias="v" type="android.view.View"/>
@@ -17,6 +17,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/layout_8dp"
             android:orientation="horizontal">
+
+        <TextView
+                android:id="@+id/note_info_progress_text"
+                style="@style/Text.Note.Info"
+                android:layout_width="wrap_content"
+                android:layout_marginEnd="@dimen/layout_4dp"
+                android:layout_marginRight="@dimen/layout_4dp"
+                android:text='@{noteItem.type == noteType.ROLL ? noteItem.text : ""}'
+                android:visibility='@{noteItem.type == noteType.ROLL ?  v.VISIBLE : v.GONE}'
+                tools:text="@string/preview_note_done"
+                tools:visibility="visible"/>
 
         <ImageView
                 android:id="@+id/note_info_notification_image"
@@ -41,17 +52,6 @@
                 android:contentDescription="@null"
                 android:visibility='@{noteItem.haveRank() ? v.VISIBLE : v.GONE}'
                 app:srcCompat="@drawable/ic_rank"
-                tools:visibility="visible"/>
-
-        <TextView
-                android:id="@+id/note_info_progress_text"
-                style="@style/Text.Note.Info"
-                android:layout_width="wrap_content"
-                android:layout_marginEnd="@dimen/layout_4dp"
-                android:layout_marginRight="@dimen/layout_4dp"
-                android:text='@{noteItem.type == noteType.ROLL ? noteItem.text : ""}'
-                android:visibility='@{noteItem.type == noteType.ROLL ?  v.VISIBLE : v.GONE}'
-                tools:text="@string/preview_note_done"
                 tools:visibility="visible"/>
 
         <TextView
