Add assertion for dialogs
Tag: #Refactor

--- a/app/src/main/res/layout/view_sheet_add.xml
+++ b/app/src/main/res/layout/view_sheet_add.xml
@@ -7,6 +7,7 @@
         android:layout_gravity="bottom">
 
     <FrameLayout
+            android:id="@+id/add_container"
             style="?attr/styleSheetAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
