--- a/app/src/main/res/layout/include_text_note_panel.xml
+++ b/app/src/main/res/layout/include_text_note_panel.xml
@@ -28,6 +28,7 @@
         <View style="@style/Divider.Horizontal"/>
 
         <FrameLayout
+                android:id="@+id/note_panel_button_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/clPrimary"
