--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/main_toolbar_holder"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
-                android:background="?attr/colorPrimary"/>
+                android:background="?attr/clPrimary"/>
 
         <FrameLayout
                 android:id="@+id/main_fragment_container"
