--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -9,7 +9,7 @@
         <variable name="currentTheme" type="int"/>
 
         <variable name="menuCallback"
-                  type="sgtmelon.scriptum.screen.ui.callback.note.text.ITextNoteMenu"/>
+                  type="sgtmelon.scriptum.screen.ui.callback.note.text.INoteMenu"/>
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
@@ -81,7 +81,7 @@
 
         </FrameLayout>
 
-        <include layout="@layout/include_text_note_panel"
+        <include layout="@layout/include_note_panel"
                  app:editMode='@{editMode}'
                  app:inputAccess='@{inputAccess}'
                  app:menuCallback='@{menuCallback}'
