--- a/app/src/main/res/layout/include_note_panel.xml
+++ b/app/src/main/res/layout/include_note_panel.xml
@@ -10,7 +10,7 @@
         <import alias="noteType" type="sgtmelon.scriptum.model.key.NoteType"/>
 
         <variable name="menuCallback"
-                  type="sgtmelon.scriptum.screen.ui.callback.note.text.ITextNoteMenu"/>
+                  type="sgtmelon.scriptum.screen.ui.callback.note.text.INoteMenu"/>
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
