--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -9,7 +9,7 @@
         <variable name="currentTheme" type="int"/>
 
         <variable name="menuCallback"
-                  type="sgtmelon.scriptum.screen.ui.callback.note.text.INoteMenu"/>
+                  type="sgtmelon.scriptum.screen.ui.callback.note.INoteMenu"/>
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
