--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-        <FrameLayout
+        <View
                 android:id="@+id/main_toolbar_holder"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
