--- a/app/src/main/res/layout/fragment_text_note.xml
+++ b/app/src/main/res/layout/fragment_text_note.xml
@@ -7,11 +7,10 @@
         <import alias="v" type="android.view.View"/>
 
         <variable name="currentTheme" type="int"/>
+        <variable name="menuCallback" type="sgtmelon.scriptum.screen.ui.callback.note.INoteMenu"/>
+        <variable name="dataLoad" type="boolean"/>
 
-        <variable name="menuCallback"
-                  type="sgtmelon.scriptum.screen.ui.callback.note.INoteMenu"/>
         <variable name="rankEmpty" type="boolean"/>
-
         <variable name="noteItem" type="sgtmelon.scriptum.model.item.NoteItem"/>
         <variable name="editMode" type="boolean"/>
 
