--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -33,7 +33,7 @@
                     style="@style/RecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility='@{isListEmpty ? v.GONE : v.VISIBLE}'
+                    android:visibility='@{!isListEmpty ? v.VISIBLE : v.GONE}'
                     tools:itemCount="1"
                     tools:listitem="@layout/item_note_roll"/>
 
