--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -6,6 +6,11 @@
 
     <integer name="color_column_count">4</integer>
 
+
     <integer name="fade_anim_time">@android:integer/config_shortAnimTime</integer>
+    <integer name="color_anim_time">@android:integer/config_shortAnimTime</integer>
+
+    <integer name="alarm_show_delay">500</integer>
+    <integer name="alarm_show_time">500</integer>
 
 </resources>
