Fix holder duration
Tag: #Fix

--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -10,6 +10,8 @@
     <integer name="fade_anim_time">@android:integer/config_shortAnimTime</integer>
     <integer name="color_anim_time">@android:integer/config_shortAnimTime</integer>
 
+    <integer name="holder_anim_time">@android:integer/config_longAnimTime</integer>
+
     <integer name="alarm_show_delay">500</integer>
     <integer name="alarm_show_time">500</integer>
 
